feat: background color, font family css

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #e2e1e0;
+  font-family: LatoWeb, Helvetica, Arial, sans-serif;
 }
 
 .App-logo {
