--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e2e1e0;
+  font-family: LatoWeb, Helvetica, Arial, sans-serif;
+  color: #54514d;
 }
 
 code {
