--- a/src/components/styles/search.css
+++ b/src/components/styles/search.css
@@ -2,33 +2,26 @@
 {
     position : absolute;
     transform : translate(-50%,-50%);
-    width: 40px;
-    height: 40px;
-    float: right;
-    background: #bc3926;
-    border: none;
-    border-radius: 50%;
-    color: #fff;
-    font-size: 1.26666667em;
-    line-height: 35px;
-    margin-right: 0;
-    text-align: center;
-    top: 0;
-    right: 2%;
+    background : #bc3926;
+    height : 40px;
+    border-radius : 40px;
+    padding : 2px;
+    left: 80%;
+    top: 3%;
 }
 .search-btn
 {
-    color : #bc3926;
+    color : #ffffff;
     float : right;
     width : 40px;
     height : 40px;
     border-radius: 50%;
-    background : #2F3640;
     display:flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     transition:0.4s;
+    background: #ffffff url("search-icon.jpg") no-repeat;
 }
 .search-txt
 {
@@ -50,5 +43,5 @@
 }
 .search-box:hover > .search-btn
 {
-    background:white;
+    background: #ffffff url("search-icon.jpg") no-repeat;
 }
